--- a/Widget.html
+++ b/Widget.html
@@ -12,6 +12,7 @@
   </div>
   <h2 style="padding-bottom:3px;">Type of Search:</h2>
   <div id="searchTypeDiv">
+    Hello, friends!
     <ul id="searchList">
     <li>
       <label class="radioContainer">Control Section
@@ -159,20 +160,12 @@
 
    <div data-dojo-attach-point="SingleSectionGroup" style="display:none" class="searchInputs">
     <div style="display:none;">
-      <label>Start Point X: <input type="text" data-dojo-attach-point="startXInputNode"></label>
+      <label>Point X: <input type="text" data-dojo-attach-point="coordinateXInputNode"></label>
     </div>
     
     <div style="display:none;">
-      <label>Start Point Y: <input type="text" data-dojo-attach-point="startYInputNode"></label>
+      <label>Point Y: <input type="text" data-dojo-attach-point="coordinateYInputNode"></label>
     </div>
-
-    <div style="display:none;">
-        <label>End Point X: <input type="text" data-dojo-attach-point="endXInputNode"></label>
-      </div>
-      
-      <div style="display:none;">
-        <label>End Point Y: <input type="text" data-dojo-attach-point="endYInputNode"></label>
-      </div>
 
     <table style="margin: 0 auto; width: 80%; text-align: center;">
       <tr style="width:100%">
